[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dead-letter"
version = "0.1.0"
description = "Tiny zero-dependency dead-letter queue helper for Python. Bounded retries + DLQ capture, inspect, requeue, drain."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "WCN Development Co"}]
keywords = ["dead-letter","dlq","retry","queue","reliability","resilience"]
classifiers = ["License :: OSI Approved :: MIT License","Programming Language :: Python :: 3","Operating System :: OS Independent","Intended Audience :: Developers"]

[project.urls]
Homepage = "https://github.com/WCN-DEV-CO/dead-letter"
